Remove user instructions file, add README, and implement injected script for GitHub project import functionality

--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,12 @@
       "run_at": "document_end"
     }
   ],
+  "web_accessible_resources": [
+    {
+      "resources": ["content/injected.js"],
+      "matches": ["https://flavortown.hackclub.com/*"]
+    }
+  ],
   "browser_specific_settings": {
     "gecko": {
       "id": "flavortown-github-exporter@hackclub.com",
