--- a/manifest.json
+++ b/manifest.json
@@ -18,10 +18,10 @@
         "https://flavortown.hackclub.com/*"
     ],
     "icons": {
-        "128": "icons/logo.svg",
-        "16": "icons/logo.svg",
-        "32": "icons/logo.svg",
-        "48": "icons/logo.svg"
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
     },
     "manifest_version": 3,
     "name": "Flavortown GitHub Exporter",
