Ajout des fichiers de l'extension au .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ node_modules/
 dist/
 build/
 *.zip
+
+# Browser extension files
+flavortown-github-export-extension.crx
+flavortown-github-export-extension.pem
