Ajout de fichiers .zip et .pem au .gitignore pour éviter leur suivi par Git

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ build/
 # Browser extension files
 flavortown-github-export-extension.crx
 flavortown-github-export-extension.pem
+flavortown-github-export-extension.zip
