--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,9 @@
 {
     "browser_specific_settings": {
         "gecko": {
+            "data_collection_permissions": {
+                "required": false
+            },
             "id": "flavortown-github-exporter@hackclub.com",
             "strict_min_version": "109.0"
         }
@@ -18,10 +21,10 @@
         "https://flavortown.hackclub.com/*"
     ],
     "icons": {
+        "128": "icons/icon128.png",
         "16": "icons/icon16.png",
         "32": "icons/icon32.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
+        "48": "icons/icon48.png"
     },
     "manifest_version": 3,
     "name": "Flavortown GitHub Exporter",
