--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
     "browser_specific_settings": {
         "gecko": {
             "data_collection_permissions": {
-                "required": false
+                "required": []
             },
             "id": "flavortown-github-exporter@hackclub.com",
-            "strict_min_version": "109.0"
+            "strict_min_version": "140.0"
         }
     },
     "content_scripts": [
