--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "browser_specific_settings": {
         "gecko": {
             "data_collection_permissions": {
-                "required": []
+                "required": ["none"]
             },
             "id": "flavortown-github-exporter@hackclub.com",
             "strict_min_version": "140.0"
