--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,7 @@
 {
+    "background": {
+        "service_worker": "background/background.js"
+    },
     "browser_specific_settings": {
         "gecko": {
             "data_collection_permissions": {
@@ -15,10 +18,18 @@
             "run_at": "document_end"
         }
     ],
-    "description": "Import your GitHub projects to Flavortown with one click",
+    "description": "Import your GitHub projects to Flavortown with one click and auto-generate descriptions with AI",
     "host_permissions": [
         "https://api.github.com/*",
-        "https://flavortown.hackclub.com/*"
+        "https://flavortown.hackclub.com/*",
+        "https://raw.githubusercontent.com/*",
+        "https://models.github.ai/*",
+        "http://localhost/*",
+        "http://127.0.0.1/*",
+        "https://api.openai.com/*",
+        "https://api.anthropic.com/*",
+        "https://openrouter.ai/*",
+        "https://telegra.ph/*"
     ],
     "icons": {
         "128": "icons/icon128.png",
@@ -28,8 +39,17 @@
     },
     "manifest_version": 3,
     "name": "Flavortown GitHub Exporter",
-    "permissions": ["storage"],
-    "version": "1.5.0",
+    "declarative_net_request": {
+        "rule_resources": [
+            {
+                "id": "ollama_rules",
+                "enabled": true,
+                "path": "rules/ollama_rules.json"
+            }
+        ]
+    },
+    "permissions": ["storage", "declarativeNetRequest"],
+    "version": "2.0.0",
     "web_accessible_resources": [
         {
             "matches": ["https://flavortown.hackclub.com/*"],
