--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,18 @@
 {
+    "manifest_version": 3,
+    "name": "Flavortown GitHub Exporter",
+    "version": "2.5.0",
+    "description": "Import your GitHub projects to Flavortown with one click and auto-generate descriptions with AI",
     "background": {
         "service_worker": "background/background.js"
     },
     "browser_specific_settings": {
         "gecko": {
+            "id": "flavortown-github-exporter@hackclub.com",
+            "strict_min_version": "140.0",
             "data_collection_permissions": {
                 "required": ["none"]
-            },
-            "id": "flavortown-github-exporter@hackclub.com",
-            "strict_min_version": "140.0"
+            }
         }
     },
     "content_scripts": [
@@ -27,7 +31,6 @@
             }
         ]
     },
-    "description": "Import your GitHub projects to Flavortown with one click and auto-generate descriptions with AI",
     "host_permissions": [
         "https://api.github.com/*",
         "https://github.com/*",
@@ -41,15 +44,12 @@
         "https://openrouter.ai/*"
     ],
     "icons": {
-        "128": "icons/icon128.png",
         "16": "icons/icon16.png",
         "32": "icons/icon32.png",
-        "48": "icons/icon48.png"
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
     },
-    "manifest_version": 3,
-    "name": "Flavortown GitHub Exporter",
     "permissions": ["storage", "declarativeNetRequest"],
-    "version": "2.5.0",
     "web_accessible_resources": [
         {
             "matches": ["https://flavortown.hackclub.com/*"],
